fix drop shadow on jobs card, align jobs info

--- a/app/assets/stylesheets/_component.scss
+++ b/app/assets/stylesheets/_component.scss
@@ -33,7 +33,7 @@
     color: $text-color;
     // font-family: 'FontAwesome';
     font-size: 1rem;
-    line-height: 2rem;
+    line-height: 1.2rem;
     padding-left: 0.4rem;
     position: absolute;
     right: 1rem;
@@ -42,7 +42,7 @@
 }
 .collapse-card__title {
   font-size: 1rem;
-  line-height: 2rem;
+  line-height: 1.2rem;
   margin: 0 2rem 0 0;
   overflow: hidden;
   text-overflow: ellipsis;
