--- a/app/assets/stylesheets/stylesheet.scss
+++ b/app/assets/stylesheets/stylesheet.scss
@@ -305,14 +305,14 @@ td {
 
   // margin-top: 180px;
 }
-.resources-card,
-.event-card,
-.job-card {
-  text-align: left;
-  margin: 0 auto;
-  width: 80%;
-  min-width: 300px;
-}
+// .resources-card,
+// .event-card,
+// .job-card {
+//   text-align: left;
+//   margin: 0 auto;
+//   width: 80%;
+//   min-width: 300px;
+// }
 .posted-by {
   display: inline-block;
   text-align: right;
